--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -55,7 +55,7 @@
 
 {% block body %}
     
-    <div>
+    <div class="index">
         <section class="lazy-loading grid grid-mittel images-overview">
             <div class="grid-sizer grid-item-mittel" style="display: none;"></div>
 
