--- a/app/Resources/views/detail/detail.html.twig
+++ b/app/Resources/views/detail/detail.html.twig
@@ -25,166 +25,171 @@
                     <img class="detail-image-img" src="{{ asset('assets/images/archivierungen/' ~ archivierung.links["mittel"]) }}" alt="" />
                 </figure>
             </div>
-            <div class="detail-fav">
-                <button class="img-button add-fav-button" title="zu Favoriten hinzufügen" data-id="{{ archivierung.id }}">
-                    <img
-                        class="add-fav-button-img-leer"
-                        alt="zu Favoriten hinzufügen"
-                        src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_leer.svg') }}"
-                        style="display: none;"
-                    />
-                    <img
-                        class="add-fav-button-img-voll"
-                        alt="zu Favoriten hinzufügen"
-                        src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_voll.svg') }}"
-                        style="display: none;"
-                    />
-                </button>
-            </div>
-            <div class="detail-text">
-                <p class="detail-text-block">
+            <div class="detail-infos">
+                <div class="detail-fav">
+                    <button class="img-button add-fav-button" title="zu Favoriten hinzufügen" data-id="{{ archivierung.id }}">
+                        <img
+                                class="add-fav-button-img-leer"
+                                alt="zu Favoriten hinzufügen"
+                                src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_leer.svg') }}"
+                                style="display: none;"
+                        />
+                        <img
+                                class="add-fav-button-img-voll"
+                                alt="zu Favoriten hinzufügen"
+                                src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_voll.svg') }}"
+                                style="display: none;"
+                        />
+                    </button>
+                </div>
 
-                    {% if archivierung.jahrString is defined %}
-                        <span class="detail-text-label">Jahr:</span> {{ archivierung.jahrString }}<br/>
-                    {% endif %}
+                <div class="detail-text">
+                    <p class="detail-text-block">
 
-                    {% if archivierung.infosArray["Titel"] is defined %}
-                        <span class="detail-text-label">Titel: </span>
-                        {{ archivierung.infosArray["Titel"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.jahrString is defined %}
+                            <span class="detail-text-label">Jahr:</span> {{ archivierung.jahrString }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Auftraggeber"] is defined %}
-                        <span class="detail-text-label">Auftraggeber:</span>
-                        {{ archivierung.infosArray["Auftraggeber"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Titel"] is defined %}
+                            <span class="detail-text-label">Titel: </span>
+                            {{ archivierung.infosArray["Titel"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Objektkategorie"] is defined %}
-                        <span class="detail-text-label">Objektkategorie:</span>
-                        {{ archivierung.infosArray["Objektkategorie"] }}<br/>
-                    {% endif %}
-                </p>
+                        {% if archivierung.infosArray["Auftraggeber"] is defined %}
+                            <span class="detail-text-label">Auftraggeber:</span>
+                            {{ archivierung.infosArray["Auftraggeber"] }}<br/>
+                        {% endif %}
 
-                <p class="detail-text-block">
+                        {% if archivierung.infosArray["Objektkategorie"] is defined %}
+                            <span class="detail-text-label">Objektkategorie:</span>
+                            {{ archivierung.infosArray["Objektkategorie"] }}<br/>
+                        {% endif %}
+                    </p>
 
-                    {% if archivierung.infosArray["Gestaltung"] is defined %}
-                        <span class="detail-text-label">Gestaltung:</span>
-                        {{ archivierung.infosArray["Gestaltung"] }}<br/>
-                    {% endif %}
+                    <p class="detail-text-block">
 
-                    {% if archivierung.infosArray["Fotografie"] is defined %}
-                        <span class="detail-text-label">Fotografie:</span>
-                        {{ archivierung.infosArray["Fotografie"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Gestaltung"] is defined %}
+                            <span class="detail-text-label">Gestaltung:</span>
+                            {{ archivierung.infosArray["Gestaltung"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Druckerei"] is defined %}
-                        <span class="detail-text-label">Druckerei:</span>
-                        {{ archivierung.infosArray["Druckerei"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Fotografie"] is defined %}
+                            <span class="detail-text-label">Fotografie:</span>
+                            {{ archivierung.infosArray["Fotografie"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Autor"] is defined %}
-                       <span class="detail-text-label">Autor:</span>
-                        {{ archivierung.infosArray["Autor"] }}<br/>
-                    {% endif %}
-                </p>
+                        {% if archivierung.infosArray["Druckerei"] is defined %}
+                            <span class="detail-text-label">Druckerei:</span>
+                            {{ archivierung.infosArray["Druckerei"] }}<br/>
+                        {% endif %}
 
-                <p class="detail-text-block">
+                        {% if archivierung.infosArray["Autor"] is defined %}
+                            <span class="detail-text-label">Autor:</span>
+                            {{ archivierung.infosArray["Autor"] }}<br/>
+                        {% endif %}
+                    </p>
 
-                    {% if archivierung.infosArray["Masse"] is defined %}
-                        <span class="detail-text-label">Maße:</span>
-                        {{ archivierung.infosArray["Masse"] }}<br/>
-                    {% endif %}
+                    <p class="detail-text-block">
 
-                    {% if archivierung.infosArray["Umfang"] is defined %}
-                        <span class="detail-text-label">Umfang:</span>
-                        {{ archivierung.infosArray["Umfang"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Masse"] is defined %}
+                            <span class="detail-text-label">Maße:</span>
+                            {{ archivierung.infosArray["Masse"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Material"] is defined %}
-                        <span class="detail-text-label">Material:</span>
-                        {{ archivierung.infosArray["Material"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Umfang"] is defined %}
+                            <span class="detail-text-label">Umfang:</span>
+                            {{ archivierung.infosArray["Umfang"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Produktionsverfahren"] is defined %}
-                        <span class="detail-text-label">Produktionsverfahren:</span>
-                        {{ archivierung.infosArray["Produktionsverfahren"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Material"] is defined %}
+                            <span class="detail-text-label">Material:</span>
+                            {{ archivierung.infosArray["Material"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Sprache"] is defined %}
-                        <span class="detail-text-label">Sprache:</span>
-                        {{ archivierung.infosArray["Sprache"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Produktionsverfahren"] is defined %}
+                            <span class="detail-text-label">Produktionsverfahren:</span>
+                            {{ archivierung.infosArray["Produktionsverfahren"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Schrift"] is defined %}
-                        <span class="detail-text-label">Schrift:</span>
-                        {{ archivierung.infosArray["Schrift"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Sprache"] is defined %}
+                            <span class="detail-text-label">Sprache:</span>
+                            {{ archivierung.infosArray["Sprache"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Farbe"] is defined %}
-                        <span class="detail-text-label">Farbe:</span>
-                        {{ archivierung.infosArray["Farbe"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Schrift"] is defined %}
+                            <span class="detail-text-label">Schrift:</span>
+                            {{ archivierung.infosArray["Schrift"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Bilddarstellung"] is defined %}
-                        <span class="detail-text-label">Bilddarstellung:</span>
-                        {{ archivierung.infosArray["Bilddarstellung"] }}<br/>
-                    {% endif %}
-                </p>
+                        {% if archivierung.infosArray["Farbe"] is defined %}
+                            <span class="detail-text-label">Farbe:</span>
+                            {{ archivierung.infosArray["Farbe"] }}<br/>
+                        {% endif %}
 
-                <p class="detail-text-block">
+                        {% if archivierung.infosArray["Bilddarstellung"] is defined %}
+                            <span class="detail-text-label">Bilddarstellung:</span>
+                            {{ archivierung.infosArray["Bilddarstellung"] }}<br/>
+                        {% endif %}
+                    </p>
 
-                    {% if archivierung.infosArray["Hinweis"] is defined %}
-                        <span class="detail-text-label">Hinweis:</span>
-                        {{ archivierung.infosArray["Hinweis"] }}<br/>
-                    {% endif %}
+                    <p class="detail-text-block">
 
-                    {% if archivierung.infosArray["Produktkategorie"] is defined %}
-                        <span class="detail-text-label">Produktkategorie:</span>
-                        {{ archivierung.infosArray["Produktkategorie"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Hinweis"] is defined %}
+                            <span class="detail-text-label">Hinweis:</span>
+                            {{ archivierung.infosArray["Hinweis"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Text"] is defined %}
-                        <span class="detail-text-label">Text:</span>
-                        {{ archivierung.infosArray["Text"] }}<br/>
-                    {% endif %}
+                        {% if archivierung.infosArray["Produktkategorie"] is defined %}
+                            <span class="detail-text-label">Produktkategorie:</span>
+                            {{ archivierung.infosArray["Produktkategorie"] }}<br/>
+                        {% endif %}
 
-                    {% if archivierung.infosArray["Ereignisse"] is defined %}
-                        <span class="detail-text-label">Ereignisse:</span>
-                        {{ archivierung.infosArray["Ereignisse"] }}<br/>
-                    {% endif %}
-                </p>
+                        {% if archivierung.infosArray["Text"] is defined %}
+                            <span class="detail-text-label">Text:</span>
+                            {{ archivierung.infosArray["Text"] }}<br/>
+                        {% endif %}
 
-                <p class="detail-text-block">
+                        {% if archivierung.infosArray["Ereignisse"] is defined %}
+                            <span class="detail-text-label">Ereignisse:</span>
+                            {{ archivierung.infosArray["Ereignisse"] }}<br/>
+                        {% endif %}
+                    </p>
 
-                    {% if archivierung.infosArray["Archiv"] is defined %}
-                        <span class="detail-text-label">Archiv:</span>
-                        {{ archivierung.infosArray["Archiv"] }}<br/>
-                    {% endif %}
+                    <p class="detail-text-block">
 
-                    <span class="detail-text-label">Archivierung-ID:</span>
+                        {% if archivierung.infosArray["Archiv"] is defined %}
+                            <span class="detail-text-label">Archiv:</span>
+                            {{ archivierung.infosArray["Archiv"] }}<br/>
+                        {% endif %}
+
+                        <span class="detail-text-label">Archivierung-ID:</span>
                         {{ archivierung.id }}<br/>
-                </p>
+                    </p>
 
+                </div>
             </div>
+
 
 
             {% if verknuepfteObjekte|length > 0 %}
                 <div class="detail-verknuepfteobjekte">
-                    <hr>
-                    <div class="grid grid-klein">
-                        <div class="grid-sizer grid-item-klein" style="display: none;"></div>
-
+                    <h3 class="font-italic">Verknüpfte Objekte:</h3>
+                    <hr/>
+                    <section class="no-grid detail-verknuepfteobjekte-overview">
+                        <div class="grid-sizer grid-item" style="display: none;"></div>
                         {% for vObjekt in verknuepfteObjekte %}
 
                             <a href="{{ url('_detail', {'slug': vObjekt.id}) }}"
-                               class="grid-item grid-item-klein">
+                               class="grid-item">
                                 <img class="" alt=""
                                      src="{{ asset('assets/images/archivierungen/' ~ vObjekt.links["klein"]) }}"
                                 />
                             </a>
 
                         {% endfor %}
-                    </div>
+                    </section>
                 </div>
+                <div class="clearfix"></div>
             {% endif %}
         </section>
 
