--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -113,10 +113,15 @@ button::-moz-focus-inner {
 * {
     font-family: 'Circular Std Book', sans-serif;
     color: black;
+    font-size: 13px;
 }
 
 h1,h2,h3,h4,h5,h6,p,a{
     color: black;
+}
+
+small{
+    font-size: inherit;
 }
 
 .big-text, .big-text *{
@@ -374,16 +379,30 @@ hr{
 
 
 /* Detail */
+.detail *{
+    vertical-align: top;
+}
+.detail-image{
+    display: inline-block;
+    width: 49%;
+    margin-right: 2%;
+}
 .detail-image-figure{
     display: inline-block;
-    max-width: 50%;
-    max-height: 65vh;
+    max-width: 100%;
 }
 .detail-image-img{
     height: auto;
     width: auto;
     max-width: 100%;
-    max-height: 65vh;
+    max-height: 70vh;
+}
+
+.detail-infos{
+    display: inline-block;
+    width: 15%;
+    margin-right: 2%;
+    margin-top: 10px;
 }
 
 .detail-fav{
@@ -401,10 +420,37 @@ hr{
     font-style: italic;
 }
 
+
+.detail-verknuepfteobjekte{
+    display: inline-block;
+    width: 31.1%;
+    float: right;
+    margin-top: 10px;
+}
+.detail-verknuepfteobjekte h3{
+    font-size: 1rem;
+    margin-bottom: 19px;
+    margin-left: 2px;
+}
 .detail-verknuepfteobjekte hr{
     border: 0;
     border-top: 1px solid black;
+    margin-bottom: 30px;
 }
+
+.detail-verknuepfteobjekte-overview .grid-item{
+    display: inline-block;
+    max-width: 150px;
+    margin-right: 28px;
+    margin-bottom: 28px;
+}
+.detail-verknuepfteobjekte-overview .grid-item img{
+    height: auto;
+    width:auto;
+    max-width: 100%;
+    max-height: 175px;
+}
+
 
 
 
