--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -133,8 +133,30 @@ small{
     font-size: inherit;
 }
 
+::placeholder {
+    color: black!important;
+    opacity: 1!important;
+}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: black!important;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: black!important;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: black!important;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: black!important;
+}
+
+
 .big-text, .big-text *{
     font-size: 23px;
+}
+
+.normal-text{
+    font-size: 13px;
 }
 
 .half-size-text{
@@ -191,6 +213,7 @@ hr{
     position: fixed;
     width: 100%;
     padding-left: 2%;
+    padding-right: 2%;
     padding-top: 0;
     margin-top: 0;
     z-index: 777;
@@ -210,6 +233,7 @@ hr{
     z-index: 999;
     top: 111px;
     padding-top: 30px;
+    height: 101vh;
 }
 #burger-overlay nav ul{
     list-style: none;
@@ -311,6 +335,52 @@ hr{
 .suche-overlay-filter{
     padding-top: 30px;
 }
+.suche-overlay-filter .label{
+    text-decoration: none;
+    cursor: pointer;
+}
+.suche-overlay-filter input[type=text]{
+    display: block;
+    width: 100%;
+    font-style: italic;
+    border: none;
+    outline: none;
+}
+.input-frame{
+    margin-bottom: 40px;
+}
+.input-frame .vorschlaege, .input-frame .auswahl{
+    width: 49.9%;
+    display: inline-block;
+}
+.input-frame .vorschlaege ul, .input-frame .auswahl ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-style: italic;
+}
+.input-frame .vorschlaege ul li, .input-frame .auswahl ul li{
+    font-size: 13px;
+}
+.input-frame .vorschlaege ul li small{
+    cursor: pointer;
+}
+.auswahl button{
+    vertical-align: middle;
+    display: inline;
+    width: 8px;
+    height: 8px;
+    margin-left: 12px;
+    padding-bottom: 3px;
+}
+.auswahl button img{
+    vertical-align: top;
+}
+
+
+
+
+
 
 /* --- Grid generell */
 .index .images-overview{
@@ -390,7 +460,8 @@ hr{
 }
 
 .irs--square{
-    width: 80%;
+    width: 33.3%;
+    float: right;
 }
 
 
