--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -30,25 +30,51 @@
     <section id="suche-overlay" class="overlay big-text" style="display: none;">
         <div class="suche-overlay-filter">
 
-            <form method="get" action="{{ path('_suchetest') }}">
+            <form id="suche-form" method="get" action="{{ path('_suche') }}">
+                <var id="ajax-route" data-route="{{ path('_ajaxVorschlaege') }}" style="display: none!important;"></var>
 
-                <div class="input-frame info-frame">
-                    <label class="label outer-label" for="Freitext">Freie Suche</label>
-                    <label class="label inner-label" for="Freitext">Freie Suche</label>
+                <ul id="blaupausen" style="display: none!important;">
+                    <li class="vorschlag-item"><span class="normal-text">Suchtext-Vorschlag A</span></li>
+
+                    <li class="auswahl-item"><span class="normal-text">Auswahl A</span>
+                        <button type="button" class="img-button" title="Suchbegriff entfernen">
+                            <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
+                        </button>
+                    </li>
+                </ul>
+
+
+                <div class="input-frame info-frame inactive">
+                    <label class="label outer-label" for="Freitext-add">Freie Suche</label>
+                    <label class="label inner-label" for="Freitext-add">Freie Suche</label>
                     <input
                         type="text"
                         id="Freitext-add"
+                        class="add-input"
                         placeholder="Suchtext"
                     >
+                    <div class="vorschlaege">
+                        <ul>
+                            <li class="vorschlag1"><span class="normal-text">Suchtext-Vorschlag 1</span></li>
+                            <li class="vorschlag2"><span class="normal-text">Suchtext-Vorschlag 2</span></li>
+                            <li class="vorschlag3"><span class="normal-text">Suchtext-Vorschlag 3</span></li>
+                            <li class="vorschlag4"><span class="normal-text">Suchtext-Vorschlag 4</span></li>
+                            <li class="vorschlag5"><span class="normal-text">Suchtext-Vorschlag 5</span></li>
+                        </ul>
+
+                    </div><div class="auswahl">
+                        <ul></ul>
+                    </div>
+
                     <hr class="input-frame-hr-bottom" />
-                    <input type="hidden" name="Freitext" id="Freitext-wert" />
+                    <input type="hidden" name="Freitext" id="Freitext-wert" class="real-input" />
                 </div>
 
                 <div class="input-frame jahr-frame">
                     <label class="label outer-label img-button">Jahr</label>
                     <hr class="input-frame-hr-top" />
                     <label class="label inner-label img-button">Jahr</label>
-                    <input type="text" class="js-range-slider" name="Jahr" value=""
+                    <input type="text" class="js-range-slider real-input" name="Jahr" value=""
                            data-type="double"
                            data-min="{{ minDBJahr }}"
                            data-max="{{ maxDBJahr }}"
@@ -62,155 +88,38 @@
                 </div>
 
 
-                <div class="input-frame info-frame">
+                <div class="input-frame info-frame inactive">
                     <label class="label outer-label" for="Titel-add">Titel</label>
                     <hr class="input-frame-hr-top" />
                     <label class="label inner-label" for="Titel-add">Titel</label>
                     <input
                             type="text"
                             id="Titel-add"
+                            class="add-input"
                             placeholder="Suchtext"
-                    >
+                    />
                     <div class="vorschlaege">
                         <ul>
-                            <li class="vorschlag1"><small class="normal-text">Suchtext-Vorschlag 1</small></li>
-                            <li class="vorschlag2"><small class="normal-text">Suchtext-Vorschlag 2</small></li>
-                            <li class="vorschlag3"><small class="normal-text">Suchtext-Vorschlag 3</small></li>
-                            <li class="vorschlag4"><small class="normal-text">Suchtext-Vorschlag 4</small></li>
-                            <li class="vorschlag5"><small class="normal-text">Suchtext-Vorschlag 5</small></li>
+                            <li class="vorschlag1"><span class="normal-text">Suchtext-Vorschlag 1</span></li>
+                            <li class="vorschlag2"><span class="normal-text">Suchtext-Vorschlag 2</span></li>
+                            <li class="vorschlag3"><span class="normal-text">Suchtext-Vorschlag 3</span></li>
+                            <li class="vorschlag4"><span class="normal-text">Suchtext-Vorschlag 4</span></li>
+                            <li class="vorschlag5"><span class="normal-text">Suchtext-Vorschlag 5</span></li>
                         </ul>
 
                     </div><div class="auswahl">
-
-                        <ul>
-                            <li class="auswahl1"><small class="normal-text">Auswahl 1</small>
-                                <button type="button" class="img-button" title="Suchbegriff entfernen">
-                                    <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
-                                </button>
-                            </li>
-
-                            <li class="auswahl2"><small class="normal-text">Auswahl 2</small>
-                                <button type="button" class="img-button" title="Suchbegriff entfernen">
-                                    <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
-                                </button>
-                            </li>
-
-                            <li class="auswahl3"><small class="normal-text">Auswahl 3</small>
-                                <button type="button" class="img-button" title="Suchbegriff entfernen">
-                                    <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
-                                </button>
-                            </li>
-
-                            <li class="auswahl4"><small class="normal-text">Auswahl 4</small>
-                                <button type="button" class="img-button" title="Suchbegriff entfernen">
-                                    <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
-                                </button>
-                            </li>
-
-                            <li class="auswahl5"><small class="normal-text">Auswahl 5</small>
-                                <button type="button" class="img-button" title="Suchbegriff entfernen">
-                                    <img alt="X" src="{{ asset('assets/images/Archiv_Symbole_Mobil_Suchfilter_abwaehlen.svg') }}"/>
-                                </button>
-                            </li>
-                        </ul>
+                        <ul></ul>
                     </div>
+
                     <hr class="input-frame-hr-bottom" />
-                    <input type="hidden" name="Titel" id="Titel-wert">
+                    <input type="hidden" name="Titel" id="Titel-wert" class="real-input" />
                 </div>
 
 
 
 
 
-                <br/>
-                <br/>
-                Titel<br/>
-                <input type="text" name="Titel">
 
-                <br/>
-                <br/>
-                Auftraggeber<br/>
-                <input type="text" name="Auftraggeber">
-
-                <br/>
-                <br/>
-                Objektkategorie<br/>
-                <input type="text" name="Objektkategorie">
-
-                <br/>
-                <br/>
-                Gestaltung<br/>
-                <input type="text" name="Gestaltung">
-
-                <br/>
-                <br/>
-                Fotografie<br/>
-                <input type="text" name="Fotografie">
-
-                <br/>
-                <br/>
-                Druckerei<br/>
-                <input type="text" name="Druckerei">
-
-                <br/>
-                <br/>
-                Autor<br/>
-                <input type="text" name="Autor">
-
-                <br/>
-                <br/>
-                Material<br/>
-                <input type="text" name="Material">
-
-                <br/>
-                <br/>
-                Produktionsverfahren<br/>
-                <input type="text" name="Produktionsverfahren">
-
-                <br/>
-                <br/>
-                Sprache<br/>
-                <input type="text" name="Sprache">
-
-                <br/>
-                <br/>
-                Schrift<br/>
-                <input type="text" name="Schrift">
-
-                <br/>
-                <br/>
-                Farbe<br/>
-                <input type="text" name="Farbe">
-
-                <br/>
-                <br/>
-                Bilddarstellung<br/>
-                <input type="text" name="Bilddarstellung">
-
-                <br/>
-                <br/>
-                Hinweis<br/>
-                <input type="text" name="Hinweis">
-
-                <br/>
-                <br/>
-                Produktkategorie<br/>
-                <input type="text" name="Produktkategorie">
-
-                <br/>
-                <br/>
-                Möbel<br/>
-                <input type="text" name="Möbel">
-
-                <br/>
-                <br/>
-                Text<br/>
-                <input type="text" name="Text">
-
-                <br/>
-                <br/>
-                Archiv<br/>
-                <input type="text" name="Archiv">
 
                 <br/>
                 <br/>
@@ -229,7 +138,7 @@
 {% block body %}
 
     {% if archivierungen|length == 0 %}
-        <small class="big-text">Es konnten keine passenden Archivierungen zu den Sucheinstellungen gefunden werden.</small>
+        <span class="big-text">Es konnten keine passenden Archivierungen zu den Sucheinstellungen gefunden werden.</span>
     {% endif %}
     
     <div class="index">
