Suche Logik komplett fertig.

--- a/app/Resources/views/default/dasProjekt.html.twig
+++ b/app/Resources/views/default/dasProjekt.html.twig
@@ -26,9 +26,8 @@
         Verbindung stellt. Sie erschien im September 2018 bei dem Grafik- und
         Architekturverlag Niggli und ist dort unter dem Titel »Die Marke Thonet
         – ein Blick auf ihre grafische Geschichte« erhältlich.<br/>
-        <a href="http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafischegeschichte.
-        html">http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafischegeschichte.
-        html</a>
+        <a href="http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafische-geschichte.html" target="_blank">
+            http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafische-geschichte.html</a>
         <br/>
         <br/>
         Das digitale Archiv Thonets ist seit März 2019 online und repräsentiert
