--- a/app/Resources/views/default/kontakt.html.twig
+++ b/app/Resources/views/default/kontakt.html.twig
@@ -31,9 +31,9 @@
         ermöglicht.
         <br/>
         <br/>
-        <a href="http://liloschaefer.com">http://liloschaefer.com</a>
+        <a href="http://liloschaefer.com" target="_blank">http://liloschaefer.com</a>
         <br/>
-        <a href="http://www.thonet.de">http://www.thonet.de</a>
+        <a href="http://www.thonet.de" target="_blank">http://www.thonet.de</a>
         <br/>
         <br/>
         <small class="font-italic">Archiv und Design:</small> Lilo Schäfer
